--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <header>
-        <div class="row">
+        <div class="row no-gutters">
             <a class="col-md-4 logo" href="index.html"></a>
             <div class="col-md-8">
-                <div class="row bg-color-name-title">
+                <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
                         <hi class="name"> Rosie Odenkini</hi>
                         <h2 class="title"> Full Stack Developer</h2>
@@ -22,10 +22,10 @@
                     </div>
 
                 </div>
-                <div class="row">
+                <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
+                        <ul id="nav" class="list-inline menucontainer">
+                            <li class="col-6 col-sm-3 ui-menu-color-home  list-inline-item">
                                 <a href="#"><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item">
