--- a/index.html
+++ b/index.html
@@ -56,8 +56,19 @@
         </div>
     </header>
     <section>
-    <footer>
-        <div>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">About </h5>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Download </h5>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Social</h5>
+            </div>
+            
+        </div>
 
     </footer>
 </body>
